--- a/isheng-web/isheng-web-admin/src/main/resources/templates/common/header.html
+++ b/isheng-web/isheng-web-admin/src/main/resources/templates/common/header.html
@@ -28,25 +28,7 @@
 	<li>&nbsp;</li>
 </ul>
 
-<div class="nav-collapse">
-	<ul id="menu" class="nav" style="*white-space: nowrap; float: none;">
-		<li class="menu">
-			<a class="menu" href="javascript:" data-href="/jeesite/a/sys/menu/tree?parentId=27" data-id="27"><span>我的面板</span></a>
-		</li>
-		<li class="menu">
-			<a class="menu" href="javascript:" data-href="/jeesite/a/sys/menu/tree?parentId=62" data-id="62"><span>在线办公</span></a>
-		</li>
-		<li class="menu">
-			<a class="menu" href="javascript:" data-href="/jeesite/a/sys/menu/tree?parentId=31" data-id="31"><span>内容管理</span></a>
-		</li>
-		<li class="menu">
-			<a class="menu" href="javascript:" data-href="/jeesite/a/sys/menu/tree?parentId=2" data-id="2"><span>系统设置</span></a>
-		</li>
-		<li class="menu">
-			<a class="menu" href="javascript:" data-href="/jeesite/a/sys/menu/tree?parentId=79" data-id="79"><span>代码生成</span></a>
-		</li>
-		<li class="menu active">
-			<a class="menu" href="javascript:" data-href="/jeesite/a/sys/menu/tree?parentId=b4b42c3336de46238a3e3612b0d7b39f" data-id="b4b42c3336de46238a3e3612b0d7b39f"><span>消息管理</span></a>
-		</li>
-	</ul>
+<div class="nav-collapse" id="headerNav">
+	
 </div>
+</html>
