--- a/isheng-web/isheng-web-admin/src/main/resources/templates/index.html
+++ b/isheng-web/isheng-web-admin/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 <div id="main" style="width: auto;">
   <!-- 页头 -->
   <div id="header" class="navbar navbar-fixed-top">
-    <div class="navbar-inner" th:include="/layout/header.html">
+    <div class="navbar-inner" th:include="/common/header.html">
       <!-- 页头 -->
     </div>
   </div>
@@ -26,7 +26,7 @@
   <div class="container-fluid">
   	<!-- 导航及正文begin -->
     <div id="content" class="row-fluid">
-      <div id="left" style="width: 160px; height: 401px;" th:include="/layout/left.html">
+      <div id="left" style="width: 160px; height: 401px;" th:include="/common/left.html">
       	<!-- 左侧菜单导航 -->
       </div>
       
@@ -41,13 +41,13 @@
       </div>
     </div>
     
-    <div id="footer" class="row-fluid" th:include="/layout/footer.html">
+    <div id="footer" class="row-fluid" th:include="/common/footer.html">
       <!-- 页脚 -->
     </div>
   </div> 
 </div>
 
 <script src="/static/isheng/common/wsize.js" type="text/javascript"></script>
-<script src="/static/isheng/index.js" type="text/javascript"></script>
+<!-- <script src="/static/isheng/index.js" type="text/javascript"></script> -->
 </body>
 </html>
