--- a/isheng-web/isheng-web-admin/src/main/resources/templates/index.html
+++ b/isheng-web/isheng-web-admin/src/main/resources/templates/index.html
@@ -48,6 +48,6 @@
 </div>
 
 <script src="/static/isheng/common/wsize.js" type="text/javascript"></script>
-<!-- <script src="/static/isheng/index.js" type="text/javascript"></script> -->
+<script src="/static/isheng/index.js" type="text/javascript"></script>
 </body>
 </html>
